Meta tag Update

--- a/style.css
+++ b/style.css
@@ -1783,7 +1783,7 @@ transition-duration: 1s;
     .logos{
         gap: 20px;
     }
-     
+     /* https://github.com/vinodjangid07 */
   }
   @media screen and (max-width:300px) {
     html {
@@ -1812,7 +1812,7 @@ transition-duration: 1s;
         gap: 20px;
     }
   }
-  
+  /* https://github.com/vinodjangid07 */
   /* responsive code above */
   
   
