--- a/Formatted code/formatted.css
+++ b/Formatted code/formatted.css
@@ -786,7 +786,7 @@ noscript{
     transform: translateY(-7px) translateX(-7px);
   }
 .resume-btn {
-    z-index:9998;
+    margin-top: 25px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -795,9 +795,6 @@ noscript{
     border: none;
     border-radius: 50%;
     cursor: pointer;
-    position: fixed;
-    bottom:10px;
-    left:10px;
     overflow: hidden;
     transition-duration: .3s;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
@@ -806,6 +803,7 @@ noscript{
     rgba(150, 93, 233, 1) 10.8%,
     rgba(99, 88, 238, 1) 94.3%
   );
+  position: relative;
   }
   
   /* plus sign */
